make the popup window center

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4538,3 +4538,10 @@ color: #C8C7CC;
     flex-direction: row;
     align-items: center;
 }
+.ui-dialog{
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
