--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -22,7 +22,7 @@
   --top-setting-btn-bg-img: url("../assets/settings-icon.svg");
   --top-save-btn-bg-img: url("../assets/save-icon.svg");
   --top-refresh-btn-bg-img: url("../assets/refresh-icon.svg");
-  --arrow-dashboard-img: url("../assets/arrow-dashboard-right.svg");
+  --arrow-dashboard-img: url("../assets/arrow-dashboard-light.svg");
 }
 
 [data-theme='light']{
@@ -77,7 +77,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  border-radius: 5px 0 0 0;
+  border-radius: 5px;
   border: 1px solid var(--border-color-regular);
   box-shadow: 0px 2px 8px 0px #00000029;
 }
@@ -424,7 +424,7 @@
 }
 
 .dropDown-container {
-  width: 25%;
+  width: 18%;
 }
 
 .dropDown {
@@ -438,10 +438,10 @@
 }
 
 .queryInput-container {
-  width: 80%;
+  width: 82%;
   display: flex;
   flex-direction: column;
-  margin-left: 16px;
+  margin-left: 10px;
   justify-content: space-between;
   max-height: 100px;
 }
@@ -481,7 +481,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  min-height: 35vh;
+  min-height: 55vh;
   height: max-content;
   justify-content: center;
   border-radius: 5px;
@@ -1182,7 +1182,6 @@ input:checked + .slider:before {
 
 #refresh-picker-btn{
   margin: 0;
-  padding: 15px 12px;
   text-decoration: none;
   border: none;
   height: 40px;
@@ -1287,20 +1286,22 @@ input:checked + .slider:before {
   background: var(--btn-hover-or-click-bg-color) !important;
 }
 .settings-btn:hover{
-    background: var(--top-setting-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
-}
+  background: var(--top-setting-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background-size: 50% !important;
+  }
 .refresh-btn:hover{
-    background: var(--top-refresh-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background: var(--top-refresh-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background-size: 50% !important;
   }
 #save-db-btn:hover{
   background: var(--top-save-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background-size: 50% !important;
 }
 .panel-header:hover{
   background-color: var(--edit-panel-border-color) !important;
 }
-
+.panelDisplay,
 .refresh-btn,
-.panEdit-panel,
 .dropdown-dash,
 .dropdown-toggle{
   border: 1px solid var(--border-color-regular) !important;
@@ -1364,4 +1365,30 @@ input:checked + .slider:before {
   height: 1px;
   background-color: var(--panel-table-line-color);
   bottom: 0;
+}
+.dropdown-arrow.orange {
+  padding: 0 !important;
+}
+.chart-options{
+  color: var(--text-color-regular);
+}
+.chart-options.selected,
+.chart-options:hover {
+  border: 1px solid var(--purple-1) !important;
+  background-color: var(--edit-panel-option-bg-color) !important;
+  color: var(--text-color-regular);
+}
+.dropdown-menu{
+  background-color: var(--index-drop-down-box-bg-color) !important;
+}
+.index-btn-show{
+  width: 100px;
+}
+over-title{
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 150px;
+  vertical-align: bottom;
 }
